test/mutation_analysis/s0202_happy_number/hafis/ablation_o3_full/mutants/22/result.txt
./test/mutation_analysis/s0202_happy_number/hafis/ablation_o3_full/mutants/22/Solution.java:28: error: unreachable statement
            if (sum != 1) {
            ^
1 error
